syntax = "proto3";

package healthcheck;

message HealthCheckRequest {}

message HealthCheckResponse {
    string message = 1;
}

service HealthCheckService {
    rpc Check(HealthCheckRequest) returns (HealthCheckResponse) {}
}